# soul.py

./: .gitignore  PROJECT.md  README.md  ROADMAP.md  hybrid_agent.py  pyproject.toml  rag_memory.py  rlm_memory.py  router.py  soul.py  soul_cli.py
.github/workflows/: publish.yml  test.yml
examples/: basic.py  local_ollama.py  scheduled.py
soulmate/: __init__.py  client.py
tests/: test_soul.py
