[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "soul-agent"
version = "0.1.0"
description = "Persistent identity and memory for any LLM agent — markdown-native, provider-agnostic"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Prahlad G. Menon", email = "menon.prahlad@gmail.com"}]
keywords = ["llm", "agent", "memory", "ai", "persistent", "anthropic", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = []  # intentionally zero required deps — install your provider SDK

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai    = ["openai>=1.50"]
all       = ["anthropic>=0.40", "openai>=1.50"]
dev       = ["pytest>=8", "pytest-cov", "anthropic>=0.40", "openai>=1.50"]

[project.urls]
Homepage   = "https://github.com/menonpg/soul.py"
Blog       = "https://blog.themenonlab.com/blog/rag-plus-rlm-complete-knowledge-base-architecture"
Issues     = "https://github.com/menonpg/soul.py/issues"

[project.scripts]
soul = "soul_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
