[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soul-agent"
version = "0.1.3"
description = "Persistent identity and memory for any LLM agent — markdown-native, provider-agnostic"
readme = "README.md"
license = "MIT"
authors = [{name = "Prahlad G. Menon", email = "menon.prahlad@gmail.com"}]
keywords = ["llm", "agent", "memory", "ai", "persistent", "anthropic", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = ["requests>=2.28"]  # v2.0 HybridAgent needs requests for pure REST API calls

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai    = ["openai>=1.50"]
dev       = ["pytest>=8", "pytest-cov", "anthropic>=0.40", "openai>=1.50"]
chromadb  = ["chromadb>=0.4"]
all       = ["anthropic>=0.40", "openai>=1.50", "chromadb>=0.4"]

[project.urls]
Homepage   = "https://github.com/menonpg/soul.py"
Blog       = "https://blog.themenonlab.com/blog/rag-plus-rlm-complete-knowledge-base-architecture"
Issues     = "https://github.com/menonpg/soul.py/issues"

[project.scripts]
soul = "soul_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
py-modules = ["soul", "soul_cli", "hybrid_agent", "rag_memory", "rlm_memory", "router"]
